--- a/app/globals.css
+++ b/app/globals.css
@@ -30,4 +30,7 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+  .clip-top-triangle {
+    clip-path: polygon(25% 0%, 100% 0%, 100% 75%, 75% 100%, 0% 100%, 0% 25%);
+  }
 }
