--- a/app/globals.css
+++ b/app/globals.css
@@ -33,4 +33,10 @@ body {
   .clip-top-triangle {
     clip-path: polygon(25% 0%, 100% 0%, 100% 75%, 75% 100%, 0% 100%, 0% 25%);
   }
+  .clip-pad-top-triangle {
+    clip-path: polygon(0 0, 100% 0, 0 100%);
+  }
+  .clip-pad-bottom-triangle {
+    clip-path: polygon(100% 0, 100% 100%, 0 100%);
+  }
 }
